lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSgxClientState,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sgx_client_state_initial_request(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSgxClientState obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerSgxClientState,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sgx_client_state_complete_handshake(
  SignalMutPointerSgxClientState cli,
  SignalBorrowedBuffer handshake_received,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalMutPointerSgxClientState,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sgx_client_state_established_send(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalMutPointerSgxClientState cli,
  SignalBorrowedBuffer plaintext_to_send,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalMutPointerSgxClientState,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sgx_client_state_established_recv(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalMutPointerSgxClientState cli,
  SignalBorrowedBuffer received_ciphertext,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_expiring_profile_key_credential_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_expiring_profile_key_credential_response_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_group_master_key_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_group_public_params_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError> signal_profile_key_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_profile_key_ciphertext_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_profile_key_commitment_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_profile_key_credential_request_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_profile_key_credential_request_context_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_receipt_credential_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_receipt_credential_presentation_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_receipt_credential_request_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_receipt_credential_request_context_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_receipt_credential_response_check_valid_contents(
  SignalBorrowedBuffer buffer,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalBorrowedBuffer)>()
external ffi.Pointer<SignalFfiError>
signal_uuid_ciphertext_check_valid_contents(SignalBorrowedBuffer buffer);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerServerPublicParams)
>()
external ffi.Pointer<SignalFfiError> signal_server_public_params_destroy(
  SignalMutPointerServerPublicParams p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerPublicParams>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_public_params_deserialize(
  ffi.Pointer<SignalMutPointerServerPublicParams> out,
  SignalBorrowedBuffer buffer,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerServerPublicParams,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_public_params_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerServerPublicParams handle,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerServerSecretParams)
>()
external ffi.Pointer<SignalFfiError> signal_server_secret_params_destroy(
  SignalMutPointerServerSecretParams p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerSecretParams>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_secret_params_deserialize(
  ffi.Pointer<SignalMutPointerServerSecretParams> out,
  SignalBorrowedBuffer buffer,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerServerSecretParams,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_secret_params_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerServerSecretParams handle,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_profile_key_get_commitment(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> profile_key,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> user_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_profile_key_get_profile_key_version(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> profile_key,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> user_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_profile_key_derive_access_key(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> profile_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_generate_deterministic(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> randomness,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_derive_from_master_key(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> master_key,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_group_secret_params_get_master_key(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_get_public_params(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_encrypt_service_id(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> service_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_decrypt_service_id(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> ciphertext,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_encrypt_profile_key(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> profile_key,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> user_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_decrypt_profile_key(
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> profile_key,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> user_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    SignalBorrowedBuffer,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_encrypt_blob_with_padding_deterministic(
  ffi.Pointer<SignalOwnedBuffer> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> randomness,
  SignalBorrowedBuffer plaintext,
  int padding_len,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_group_secret_params_decrypt_blob_with_padding(
  ffi.Pointer<SignalOwnedBuffer> out,
  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> params,
  SignalBorrowedBuffer ciphertext,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerSecretParams>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_server_secret_params_generate_deterministic(
  ffi.Pointer<SignalMutPointerServerSecretParams> out,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> randomness,
);
